--- a/Summer2024/src/content/docs/index.mdx
+++ b/Summer2024/src/content/docs/index.mdx
@@ -8,27 +8,43 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Check it out!
-      link: /guides/example/
+      link: /summer2024/introduction
       icon: right-arrow
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-{/*
-## Next steps
+## Topics:
 
 <CardGrid stagger>
-    <Card title="Update content" icon="pencil">
-        Edit `src/content/docs/index.mdx` to see this page change.
+    <a href="/summer2024/introduction">
+    <Card title="Introduction" icon="document">
+What I'll be covering in this work term report
     </Card>
-    <Card title="Add new content" icon="add-document">
-        Add Markdown or MDX files to `src/content/docs` to create new pages.
+    </a>
+    <a href="/summer2024/informationabouttheemployer">
+    <Card title="Information About The Employer" icon="document">
+    Some general information about my employer: Insignia Software Inc.
     </Card>
-    <Card title="Configure your site" icon="setting">
-        Edit your `sidebar` and other config in `astro.config.mjs`.
+    </a>
+    <a href="/summer2024/goals">
+    <Card title="Goals" icon="document">
+    Exploring the goals I set for myself this work term
     </Card>
-    <Card title="Read the docs" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </a>
+    <a href="/summer2024/jobdescription">
+    <Card title="Job Description" icon="document">
+    A summary of my day-to-day responsibilities
     </Card>
+    </a>
+    <a href="/summer2024/conclusions">
+    <Card title="Conclusions" icon="document">
+    Some of the lessons I learned and my main takeways from this work term
+    </Card>
+    </a>
+    <a href="/summer2024/acknowledgements">
+    <Card title="Acknowledgements" icon="document">
+    Acknowledging some of the awesome people that helped me along the way
+    </Card>
+    </a>
 </CardGrid>
-*/}
