--- a/Summer2024/src/content/docs/summer2024/acknowledgements.mdx
+++ b/Summer2024/src/content/docs/summer2024/acknowledgements.mdx
@@ -2,4 +2,14 @@
 title: Acknowledgements
 description: Acknowledgements
 ---
-Is there something or someone that needs acknowledgement?
+import { Steps, Aside } from '@astrojs/starlight/components';
+
+
+### I would like to thank
+<Steps>
+1. [Ali Akramizadeh](https://www.linkedin.com/in/akramizadeh/), My boss
+2. [Humayon Butt](https://www.linkedin.com/in/humayon-butt-22a5ab218/) The President of Insignia Software Inc. who hired me and has taken an active role in mentoring me
+3. The [SCOS](https://www.uoguelph.ca/computing) [co-op coordinators](mailto:socscoop@uoguelph.ca) at the University of Guelph. Special shout-out to Laura Gatto for being my advisor.
+</Steps>
+
+
