--- a/Summer2024/src/content/docs/summer2024/conclusions.mdx
+++ b/Summer2024/src/content/docs/summer2024/conclusions.mdx
@@ -2,4 +2,10 @@
 title: Conclusions
 description: Conclusions
 ---
-Review what is important. If your audience were asked to describe the contents of your website, what would you want them to say?
+My work term at Insignia Software Inc. was a great opportunity that allowed me to gain a better understanding of how a software business is run and what the technical development side of that looks like as well.
+
+In this role I learned about a lot of new technologies including .NET, Blazor, C#, WPF, EntityFramework, Bootstrap, InnoSetup, etc.
+
+Because I was able to work with so many technologies over this short period of time, I was able to gain a much better understanding of Windows/.NET development. I believe this may crucial experience that will help me land a full-time position as many companies rely on Microsoft technologies.
+
+In conclusion, I believe this experience was very beneficial in aiding me to become a proficient software developer. In addition to working on the technical side, I was given the opportunity to learn about the non-technical side (library management). This allowed me to gain a better comprehension of customer requirements and how to implement them in a way that benefits all parties involved.
