--- a/Summer2024/src/content/docs/summer2024/goals.mdx
+++ b/Summer2024/src/content/docs/summer2024/goals.mdx
@@ -4,18 +4,15 @@ description: Goals
 ---
 import { Steps, Aside } from '@astrojs/starlight/components';
 
-Did you develop goals relating to your job tasks?
-What skills did you want to learn? How will these tasks benefit your next work experience?
-What technologies did you want to work with and why?
-
-### Reflection on goals (general)
+### General Reflection
 When I sat down to choose my learning goals I made sure to choose goals I thought were realistically achievable, challenging, and beneficial in the long term.
 
 As I discuss below, I believe the goals I chose are very closely aligned with my job tasks while also being generally applicable to other software development roles I will be in in the future.
 
 In this work term I learned a lot about numerous technologies I had never used or even heard of before. Many of them I used, others I learned about as it was still pertinent to performing my job properly. The technologies are as follows:
 <Steps>
-1. **.NET** (C#, Blazor, EntityFramework, Visual Studio, WPF)
+1. **.NET** (C#, EntityFramework, Visual Studio, WPF)
+2. Web (Bootstrap, Blazor Server, Blazor WASM)
 2. **InnoSetup** - used to make .msi software installers
 3. **DevExpress** - used to create, modify, and print office documents
 </Steps>
