--- a/Summer2024/src/content/docs/summer2024/informationabouttheemployer.mdx
+++ b/Summer2024/src/content/docs/summer2024/informationabouttheemployer.mdx
@@ -3,14 +3,15 @@ title: Information about the Employer
 description: Information about the Employer
 ---
 
-Briefly describe your employer and the area of computing science that is related to this company or agency. Include interesting facts about the employer (people, location, products, etc.).
+![company banner](../../..//assets/insignia.png)
 
+<br />
 This work term I was employed by Insignia Software Inc.
 
 Insignia Software Inc. is a softare company that specializes in library management software. They also offer digital asset and resource management solutions.
 
 The company's main producted is their ILS (integrated library system) solution. This allows an organization with multiple physical libraries to sync and coordiante item (books, cds, etc) and patron (students, librarians, etc) information.
 
-Insignia is a market leader in their industry and work with many large organizations including the TDSB and TCDSB.
+Insignia is a market leader in their industry and work with many large organizations including the **TDSB and TCDSB**.
 
-The company is based out of Edmonton, Alberta, Canada and also has many customers & employees across the world.
+The company is based out of **Edmonton, Alberta, Canada** and also has many customers & employees across the world.
