--- a/Summer2024/src/content/docs/summer2024/introduction.mdx
+++ b/Summer2024/src/content/docs/summer2024/introduction.mdx
@@ -5,20 +5,23 @@ description: Let's talk about my Summer 2024 Co-op position!
 
 ### Let's talk about my Summer 2024 Co-op position!
 
+![Welcome](../../..//assets/welcome.webp)
+
 In this report, I'm going to be discussing:
 
 import { Steps } from '@astrojs/starlight/components';
 
 <Steps>
-1. Details about my employer, Insignia Software
-2. The goals I set for myself at the start of the work term and how I achieved them
-3.  Brief summary of my day-to-day responsibilities and what I've learned along the way
-4.  Some of the lessons I learned and my main takeways from this work term
-5.  Acknowledging some of the awesome people that have helped me succeed in this work term
+1. Details about my employer, [Insignia Software Inc.](https://www.insigniasoftware.com)
+2. The **goals** I set for myself at the start of the work term and how I achieved them
+3. Brief summary of my **day-to-day responsibilities** and what I've learned along the way
+4. Some of the lessons I learned and my **main takeways** from this work term
+5. **Acknowledging** some of the awesome people that have helped me succeed in this work term
 
 </Steps>
 
 In reading this, I hope you gain a comprehensive understanding of what my work term was like and what skills, knowledge (technical and non-technical), and lessons I've acquired.
 
 <br />
-<a href="/summer2024/informationabouttheemployer">Click here to go to the next page!</a>
+> This website was made with [Astro](https://astro.build/). You can find the source code [here](https://github.com/m-GDEV/WorkTermReports-GuelphCoop)
+
